FIXED FINDINGS ALIGNMENT FOR PRINTING

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ input {
 }
 
 .findings {
-  margin-top: 60px;/*Sandeep's changes*/
+  margin-top: 80px;/*Sandeep's changes*/
   width: 550px;
   height: 115px;
 }
